# Dual-Manipulator

./: New Text Document.txt  README.md
Fat Man/: full_assembly_trial_1.SLDASM
Little_Boy_Simplified/: L_shoulder.SLDPRT  R_shoulder.SLDPRT  arm_support_link.SLDPRT  elbow.SLDPRT  finger.SLDPRT  gripper_servo_shaft_link.SLDPRT  humerus.SLDPRT  little_boy_ sim.SLDASM  little_boy_.SLDASM  little_boy_URDF.SLDASM  main_body_.SLDPRT  shaft.SLDPRT  triceps_.SLDPRT  ulna_.SLDPRT  (+2 more)
Little_Boy_Simplified/little_boy/: CMakeLists.txt  package.xml
Little_Boy_Simplified/little_boy/config/: joint_names_little_boy.yaml
Little_Boy_Simplified/little_boy/launch/: display.launch  gazebo.launch
Little_Boy_Simplified/little_boy/meshes/: elbow_L_ins1.STL  elbow_L_ins2.STL  elbow_R_ins2.STL  finger_actuator_inner_L.STL  finger_actuator_inner_R.STL  finger_actuator_outer_L.STL  finger_actuator_outer_R.STL  finger_inner_L_ins1.STL  finger_inner_R_ins2.STL  finger_outer_L_ins2.STL  finger_outer_R_ins2.STL  finger_support_inner_L.STL  finger_support_inner_R.STL  finger_support_outer_L.STL  finger_support_outer_R.STL  humerus_L.STL  humerus_R.STL  humerus_support_L.STL  humerus_support_R.STL  servo_shaft_L.STL  servo_shaft_R.STL  shoulder_L.STL  shoulder_R.STL  triceps_L.STL  triceps_R.STL  ulna_L_in2.STL  ulna_L_ins1.STL  ulna_R_ins1.STL  ulna_R_ins2.STL  ulna_support_L.STL  ulna_support_R.STL  wheel_L1.STL  wheel_L2.STL  wheel_L3.STL  wheel_R1.STL  wheel_R2.STL  wheel_R3.STL  wrist_L_ins1.STL  wrist_R_ins1.STL
Little_Boy_Simplified/little_boy/urdf/: little_boy.csv  little_boy.urdf
(+270 files in other folders)
